# Top-Interview-easy

./: CMakeLists.txt
Google_tests/: CMakeLists.txt  test.cpp
programs/: add.cpp  declaration.h  hello.cpp  mul.cpp  myatoi.cpp  shortest-path-visiting-all-node.cpp
